plugins {
    id 'com.android.application'
}

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.2"

    defaultConfig {
        applicationId "com.example.myapplication"
        minSdkVersion 16
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.2.1'

    // Required -- JUnit 4 framework
    testImplementation 'junit:junit:4.13.2' // Updated to the latest stable version

    // Optional -- Mockito framework
    testImplementation 'org.mockito:mockito-core:3.11.2' // Updated to a more recent version
    testImplementation 'org.mockito:mockito-inline:3.11.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'

    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
}

tasks.withType(JavaCompile) {
    options.forkOptions.jvmArgs << '--add-opens' << 'java.base/java.io=ALL-UNNAMED'
    options.forkOptions.jvmArgs << '--add-opens' << 'java.base/java.lang=ALL-UNNAMED'
    options.forkOptions.jvmArgs << '--add-opens' << 'java.base/java.util=ALL-UNNAMED'
}

tasks.withType(Test) {
    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
}